fixed cube being off center

--- a/memecube/css/styles.css
+++ b/memecube/css/styles.css
@@ -42,6 +42,7 @@ body {
   display: block;
   position: absolute;
   border: 2px solid black;
+  margin: 0;
 }
 
 #cube figure {
